# agv_esp32_station

./: .editorconfig  .gitignore  CMakeLists.txt  chatgpt.txt  sdkconfig
include/: config.h  data_storage.h  fn_state.h  global_variable.h  main.h  mcu_const.h  prioritites_sequ.h  vec.h  vec_mod.h
include/connectivity/: cmds.h  trcv_buffer.h
include/connectivity/fdcan/: main.h  trcv_buffer.h
include/connectivity/uart/: main.h
include/main/: config.h  data_storage.h  fn_state.h  global_variable.h  vec.h
include/storage/: main.h
include/uart/: main.h  packet.h  packet_proc.h  transceive.h  trcv_buffer.h
include/wifi/: connect.h  main.h  packet.h  packet_proc.h  tcp_transceive.h  udp_transceive.h
src/: CMakeLists.txt  data_storage.c  fn_state.c  global_variable.c  main.c  vec.c
src/connectivity/: trcv_buffer.c
src/connectivity/fdcan/: main.c  trcv_buffer.c
src/connectivity/uart/: main.c
src/connectivity/wifi/: main.c
src/connectivity/wifi/https/: keep_alive.c  main.c  server.c  trcv_buffer.c
src/connectivity/wifi/https/certs/: prvtkey.pem  servercert.pem
src/connectivity/wifi/https/url/: ws.c
src/main/: config.c  data_storage.c  fn_state.c  global_variable.c  main.c  vec.c
src/storage/: main.c
src/storage/sdcard/: file.c  main.c
src/uart/: main.c  packet.c  packet_proc.c  transceive.c  trcv_buffer.c
src/wifi/: main.c  packet.c  tcp_transceive.c  udp_transceive.c
src/wifi/http/: http_server.c
src/wifi/http/url/: echo.c  hello.c  test.c  ws.c
src/wifi/https/: keep_alive.c  main.c  wss_server_example.c
src/wifi/https/url/: ws.c
(+14 files in other folders)
